--- a/web_flask/templates/7-states_list.html
+++ b/web_flask/templates/7-states_list.html
@@ -7,7 +7,7 @@
         <H1>States</H1>
         {% comment %} {{ state.id }}: <B>{{ state.name }} {% endcomment %}
         <UL>
-            {% for state in States %}
+            {% for state in states.values() %}
                 <LI>{{ state.id }}: <B>{{ state.name }}</B></LI>
             {% endfor %}
         </UL>
