--- a/web_flask/templates/8-cities_by_states.html
+++ b/web_flask/templates/8-cities_by_states.html
@@ -4,12 +4,12 @@
         <TITLE>HBNB</TITLE>
     </HEAD>
     <BODY>
-        <H1>States</H1>
+        <H1>Statess</H1>
         <UL>
             {% for key1, state in states.items() %}
                 <LI>{{ state.id }}: <B>{{ state.name }}</B>
                     <UL>
-		                {% for city in state.cities|sort(attribute='name') %}
+		                {% for city in state.cities %}
 		                    <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
 		                {% endfor %}
 		            </UL>
