--- a/web_flask/templates/8-cities_by_states.html
+++ b/web_flask/templates/8-cities_by_states.html
@@ -6,15 +6,14 @@
     <BODY>
         <H1>Statess</H1>
         <UL>
-            {% for key1, state in states.items() %}
-                <LI>{{ state.id }}: <B>{{ state.name }}</B>
-                    <UL>
-		                {% for city in state.cities %}
-		                    <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
-		                {% endfor %}
-		            </UL>
-	            </LI>
-	        {% endfor %}
+            {% for state in states %}
+                <LI>{{ state.id }}: <B>{{ state.name }}</B></LI>
+                <UL>
+                    {% for city in state.cities %}
+                        <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
+                    {% endfor %}
+                </UL>
+            {% endfor %}
         </UL>
     </BODY>
 </HTML>
